refactor(server): remove withoutThumbs
